--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,10 @@
 {
     "version": 2,
-    "builds": [{ "src": ".server.js", "use": "@vercel/node"}],
-    "routes": [{ "src": "/(.*)", "dest": "/"}]
-}
+    "builds": [
+      { "src": "server/api/graphql.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/graphql", "dest": "/api/graphql.js" }
+    ]
+  }
   
