--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "@as-integrations/next": "^3.2.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "dotenv": "^16.5.0",
