--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,7 +4,7 @@
       { "src": "server/api/graphql.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/graphql", "dest": "/api/graphql.js" }
+      { "src": "/graphql", "dest": "api/graphql.js" }
     ]
   }
   
