--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-      { "src": "server/api/graphql.js", "use": "@vercel/node" }
+      { "src": "api/graphql.js", "use": "@vercel/node" }
     ],
     "routes": [
       { "src": "/graphql", "dest": "api/graphql.js" }
