--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.14.1",
     "@cloudinary/url-gen": "^1.21.0",
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "graphql": "^16.10.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.481.0",
