--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
     "mongoose": "^8.13.2",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.1",
+    "resend": "^4.4.1"
   }
 }
