--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "resend": "^4.4.1"
   }
